--- a/README.adoc
+++ b/README.adoc
@@ -18,4 +18,5 @@ Since it's practically impossible to test dstat on every possible permutation of
 
 If you have improvements or bug reports, please send them to:
 
-    http://github.com/dagwieers/dstat
+	http://github.com/dagwieers/dstat
+	branch RC-1234
